<resources>
    <string name="app_name">FoodOnMyMind</string>
    <string name="search_hint">Search pasta</string>
    <string name="search_title">search item</string>
    <string name="custom_recipes">Custom Recipes</string>
    <string name="preset_recipes">Online Recipes</string>
    <string name="restaurants">Restaurants</string>

    <!--UI strings-->
    <string name="label_end">%d.)</string>
    <string name="no_results">No results that matched your search: </string>
    <string name="food_gallery">Food Gallery (COMING SOON)</string>
    <string name="find_food">Find Me Food! (COMING SOON)</string>
    <string name="permission_bar">FoodOnMyMind needs location to search for nearby restaurants</string>
    <string name="gps_loc">Use GPS location to search for nearby restaurants</string>
    <string name="manual_loc">Don\'t use location - enter location manually</string>
    <string name="addr_hint">123 Fake Street, FakeTown, US</string>
    <string name="snack_confirm">Allow FoodOnMyMind to use location</string>
    <string name="manual_confirm">OK</string>
    <string name="manual_cancel">Cancel</string>
    <string name="invalid_addr">Couldn\'t find location - please enter with more detail or another nearby location</string>
    <string name="toast_cancel">Cancelling, you must either allow gps location access or manually enter an address to proceed</string>
    <string name="recipe_hint">Title of your recipe</string>
    <string name="ingredients">Ingredients and Quantities</string>
    <string name="ingre_hint">Ingredient A</string>
    <string name="quantity_hint">X ounces</string>
    <string name="recipe_steps">Directions:</string>
    <string name="step_hint">Stir the pot</string>
    <string name="step_one">Step 1</string>
    <string name="add_ingre">Add Ingredient</string>
    <string name="add_step">Add Step</string>
    <string name="add_picture">Add Picture</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="step">Step </string>
    <string name="need_title">Recipe requires title, enter below:</string>
    <string name="recipe_not_saved">Recipe not saved, recipes require a title to be saved</string>
    <string name="recipe_saved">Recipe saved!</string>
    <string name="ingredients_label">Ingredients:</string>
    <string name="steps_label">Directions:</string>
    <string name="insufficient_space">Not enough space to save image</string>

    <!--Content Descriptors-->
    <string name="edit_title">Recipe title input</string>
    <string name="ingre_title_desc">Add Ingredients and their quantities below</string>
    <string name="dir_desc">Add directions section below</string>
    <string name="ingre_input_desc">Input box for description of an ingredient </string>
    <string name="qty_input_desc">Quantity for ingredient </string>
    <string name="step_input_desc">Step number </string>
    <string name="add_ingr_desc">Add another ingredient input box</string>
    <string name="add_step_desc">Add another step</string>
    <string name="add_pic_desc">Add picture to recipe</string>
    <string name="save_desc">Save your recipe</string>
    <string name="first_ingre_desc">Input box for description of ingredient one</string>
    <string name="first_qty_desc">Quantity for ingredient one</string>
    <string name="step_one_desc">Input for step one</string>


    <!--Base api urls-->
    <string name="recipeSearchApi">http://food2fork.com/api/search?</string>
    <string name="recipeGetApi">http://food2fork.com/api/get?</string>
    <string name="restaurantSearchApi">https://maps.googleapis.com/maps/api/place/textsearch/json?</string>
    <string name="restaurantGetApi">https://maps.googleapis.com/maps/api/place/details/json?</string>
    <string name="googPhotoApi">https://maps.googleapis.com/maps/api/place/photo?</string>

    <!--Search query string key for shared preferences/intent data-->
    <string name="user_search">user_search</string>
    <string name="lat">latitude</string>
    <string name="lon">longitude</string>
    <string name="loc_search">manual location</string>
    <string name="receiver">GeoReceiver</string>
    <string name="recipe_uri">Custom Recipe URI</string>
    <string name="recipe_image_path">Custom Recipe Image Path</string>
    <string name="image_index">Index for the image of custom image</string>

    <!--Column names for the SQLiteDatabase tables-->
    <string name="col_title">title</string>
    <string name="col_img">img_key</string>
    <string name="col_desc">description</string>
    <string name="col_addr">address</string>
    <string name="col_ingr">ingredients</string>
    <string name="col_rating">rating</string>
    <string name="col_price">price_level</string>
    <string name="col_src">source_url</string>

    <!--File saving related strings-->
    <string name="ftype">.jpg</string>
    <string name="file_provider_authority">com.harrison.foodonmymind.fileProvider</string>
    <string name="food_provider_authority">com.harrison.foodonmymind.foodProvider</string>
    <string name="mipmap_uri_base">android.resource://</string>
    <string name="internal_image_base">file://</string>
    <string name="local_image_prefix">local_app_version</string>
    <string name="file_types">image/*</string>
    <string name="timestampe_fmt">yyyyMMdd_HHmmss</string>

    <!--DB query strings-->
    <string name="db_or">OR</string>
    <string name="db_percent">%</string>
    <string name="db_like">LIKE</string>

    <!--API keys-->
    <string name="googApiKey">AIzaSyDbz3k8gMyuEqrpgS0mCkjJ0Wv0BJ7LJ3w</string>
    <string name="ffApiKey">777148f090899d798051ac7920fa3d32</string>

    <!--API key string-->
    <string name="api_key">key=</string>

    <!--Google photo query parameters-->
    <string name="goog_q_photo">photoreference=</string>
    <string name="goog_q_maxh">maxheight=</string>
    <string name="goog_q_maxw">maxwidth=</string>

    <!--Google place search query parameters,
    set the default radius to search to be 15 miles,
    the types query key will restrict the search to only restaurant / restaurant like places. note
    the google place search API is confusing. says the type=restaurant should be a supported type
    to filter on but to get it to work 'food' worked but not restaurant. Restaurant kept returning
    zero results-->
    <string name="goog_q_query">query=</string>
    <string name="goog_q_rad">radius=</string>
    <string name="goog_q_loc">location=</string>
    <string name="goog_rad_def">15</string>
    <string name="goog_type">type=</string>
    <string name="pl_bakery">bakery</string>
    <string name="pl_cafe">cafe</string>
    <string name="pl_delivery">meal_delivery</string>
    <string name="pl_take">meal_takeaway</string>
    <string name="pl_food">food</string>


    <!--Food2Fork query parameters-->
    <string name="ff_q_rId">rId=</string>
    <string name="ff_q_search">q=</string>

    <!--Google place search API result keys-->
    <string name="goog_results">results</string>
    <string name="goog_addr">formatted_address</string>
    <string name="goog_id">place_id</string>
    <string name="goog_photos">photos</string>
    <string name="goog_photo_ref">photo_reference</string>
    <string name="goog_photo_width">width</string>
    <string name="goog_price">price_level</string>
    <string name="goog_rating">rating</string>
    <string name="goog_title">name</string>

    <!--Food2Fork search API result keys-->
    <string name="f2f_recipes">recipes</string>
    <string name="f2f_title">title</string>
    <string name="f2f_source">source_url</string>
    <string name="f2f_id">recipe_id</string>
    <string name="f2f_img">image_url</string>
    <string name="f2f_get_recipe">recipe</string>
    <string name="f2f_get_ingr">ingredients</string>

    <!--google ad strings-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_custom_list">CustomListActivity</string>
    <string name="appwidget_text">Widget list of recipes</string>
    <string name="add_widget">Add widget</string>
</resources>
