<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_hint"
            android:id="@+id/recipe_title"
            android:contentDescription="@string/edit_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ingredient_list">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ingredients"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:contentDescription="@string/ingre_title_desc"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ingredient_quantities">
                <EditText
                    android:layout_width="@dimen/ingredient"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingre_hint"
                    android:id="@+id/ingredient"
                    android:textSize="@dimen/hint_size"
                    android:contentDescription="@string/first_ingre_desc"/>
                <EditText
                    android:layout_width="@dimen/quantity"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ingredient"
                    android:layout_alignParentRight="true"
                    android:hint="@string/quantity_hint"
                    android:textSize="@dimen/hint_size"
                    android:contentDescription="@string/first_qty_desc"/>
            </RelativeLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_ingre"
            android:onClick="addIngredient"
            android:contentDescription="@string/add_ingr_desc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_steps"
            android:contentDescription="@string/dir_desc"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/directions">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/step_one" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/step_hint"
                    android:contentDescription="@string/step_one_desc"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_step"
            android:onClick="addStep"
            android:contentDescription="@string/add_step_desc"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_picture"
            android:onClick="addPic"
            android:contentDescription="@string/add_pic_desc"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_recipe"
            android:onClick="saveRecipe"
            android:contentDescription="@string/save_desc"/>

    </LinearLayout>
</ScrollView>