<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.harrison.foodonmymind.MainActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:id="@+id/check_boxes">
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/box_preset_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preset_recipes"
            android:onClick="onBoxOneChecked"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/box_custom_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_recipes"
            android:onClick="onBoxTwoChecked"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/box_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurants"
            android:onClick="onBoxThreeChecked"/>

    </android.support.v7.widget.LinearLayoutCompat>


    <Button
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/custom_recipes"
        android:layout_below="@id/check_boxes"
        android:id="@+id/custom_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/food_gallery"
        android:layout_below="@id/custom_button"
        android:id="@+id/gallery_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/find_food"
        android:layout_below="@id/gallery_button"
        android:id="@+id/find_button"/>




</RelativeLayout>
